--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/cli": "^7.0.0",
     "@nestjs/mapped-types": "0.0.5",
     "@nestjs/schematics": "^7.0.0",
+    "@nestjs/swagger": "^4.5.12",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/hapi__joi": "^17.1.4",
@@ -53,6 +54,7 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
+    "swagger-ui-express": "^4.1.4",
     "ts-jest": "25.2.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
