--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,12 @@ services:
     ports:
       - "5445:5432"
     environment:
-       POSTGRES_PASSWORD: pass123
+      POSTGRES_PASSWORD: pass123
+  
+  db-test-nestjs-coffee:
+    image: postgres
+    restart: always
+    ports:
+      - "5444:5432"
+    environment: 
+      POSTGRES_PASSWORD: pass123
