--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "pretest:e2e": "docker-compose up -d db-test-nestjs-coffee",
+    "posttest:e2e": "docker-compose stop db-test-nestjs-coffee && docker-compose rm -f db-test-nestjs-coffee"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
